--- a/config/locales/hi.yml
+++ b/config/locales/hi.yml
@@ -45,8 +45,8 @@ hi:
   no badges found other: "%{username} के द्वारा अभी तक कोई badge अर्जित नहीं किया गया हैं|"
   see users badges: "%{username}'s के द्वारा अर्जित badges देखिये"
   followers: "अनुयायी "
-  following: " निम्नलिखित "
-  highlight: " हाइलाइट"
+  following: "निम्नलिखित "
+  highlight: "हाइलाइट"
   bookmark: "बुकमार्क "
   earned badge date: "%{username}%{ago}समय पहले अर्जित "
   badges title: "Badges"
@@ -84,7 +84,7 @@ hi:
   privacy policy: "निजी नीति"
   terms: "शर्तें"
   press: "प्रेस "
-  get support: "Support"
+  get support: "सहायता"
   donate title: "योगदान"
   choose language field: "अपनी भाषा का चयन कीजिए:"
   settings: "सेटिंग्स "
@@ -126,6 +126,7 @@ hi:
     like button text: "पसंद"
     unlike button text: "नापसंद"
   notes:
+    list title: "टिप्पणियां "
     loading community: "सामाजिक टिप्पणीयां.............. लोड किया जा रहा हैं|"
     no community notes: "आपके द्वारा सेलेक्टेड पध्य से संदर्भित समुदाय नोट्स नहीं पाया गया हैं| टिप्पणी बनाने हेतु बाइबिल से एक पध्य को बाइबिल रीडर में सेलेक्ट करे तथा रीडर के ऊपर दर्शाए गए सेलेक्ट बटन को क्लिक करिए| "
     public: "सार्वजनिक"
@@ -216,7 +217,7 @@ hi:
     edit account_existence: "अकाउंट डिलीट करें"
     delete account button: "मेरा YouVersion अकाउंट डिलीट कीजिए"
     no devices: "आपके YouVersion अकाउंट से कोई डिवैसिस कनेक्टेड नहीं हैं"
-    no devices download copy: "बाइबिल app ऑनलाइन बाइबिल YouVersion पर आधारित एक मुफ्त मोबाइल बाइबिल हैं जो लगभग किसी भी फ़ोन पर install किया जा सकता हैं | बाइबिल  App उपयोगकर्ता को बाइबिल पढने में तथा पद्य को अपने सामाजिक नेटवर्क पर share करने ,बुकमार्क और कई ज्यादा सुविधा एक ही स्वरुप में तेजी से वर्दित मोबाइल जीवन शैली के लिए उपलब्ध कराता हैं Visit <a href='http://www.youversion.com/download'>youversion.com/download</a> अपने मोबाइल device पर बाइबिल App डाउनलोड करने के लिए और अपने अकाउंट कनेक्ट करने हेतु विवरण|"
+    no devices download copy: "बाइबिल app ऑनलाइन बाइबिल YouVersion पर आधारित एक मुफ्त मोबाइल बाइबिल हैं जो लगभग किसी भी फ़ोन पर इन्स्टॉल किया जा सकता हैं | बाइबिल  App उपयोगकर्ता को बाइबिल पढने में तथा पद्य को अपने सामाजिक नेटवर्क पर share करने ,बुकमार्क और कई ज्यादा सुविधा एक ही स्वरुप में तेजी से वर्दित मोबाइल जीवन शैली के लिए उपलब्ध कराता हैं Visit <a href='http://www.youversion.com/download'>youversion.com/download</a> अपने मोबाइल डिवैसिस पर बाइबिल App डाउनलोड करने के लिए और अपने अकाउंट कनेक्ट करने हेतु विवरण|"
     yes delete: "हाँ, मेरा अकाउंट डिलीट कीजिए"
     account delete success: "आपका YouVersion अकाउंट सफलतापूर्वक डिलीट किया गया हैं| हम आशा करते हैं की आप बाइबिल से जुड़े रहने की अन्य कोशिश करेंगे| आप अभी भी कुछ app उपयोग कर सकते हैं जैसे <a href=http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
     delete account description: "यदि आप अपने अकाउंट को डिलीट करते हैं तो आप स्थायी रूप से आपकी जानकारी, इतिहास और नीजी कार्य (जैसे टिपण्णी, बुकमार्क और  हाइलाइट आदि) जो YouVersion.com के अन्तर्गत हैं, हट जाएगी| यह कारवाई आप के द्वारा या हमारी टीम के द्वारा पुन: प्रारंभ करने में नामुमकिन हैं| यदि आप निश्चित हैं, कृपया अपनी कारवाई जारी रखे|"
@@ -256,7 +257,7 @@ hi:
     resend confirmation button: "पुन: पुष्टि कीजिए"
     privacy:
       policy: "%{youversion} गोपनीयता नीति"
-      intro: "Youversion एक ऐसा वेबसाइट और application हैं जिसका सञ्चालन एवं मालिकाना हक केवल LifeChurch.tv को हैं| आपके द्वारा उपलब्ध कराई गयी जानकारी का सही देखभाल के लिए विश्वसनीय हैं| हमे उम्मीद हैं कि यह  बयान आपको समझने में सहायक होगी आपकी जानकारी सुरक्षित हैं| आपके द्वारा उपलब्ध  कराई गयी जानकारी कोई भी त्रितय पक्षीय गोपनीयता रिती के विरुद्ध उपलब्ध नहीं कराई जाएगी|"
+      intro: "Youversion एक ऐसा वेबसाइट और ऐप्लकेशन हैं जिसका संचालन एवं मालिकाना हक केवल LifeChurch.tv को हैं| आपके द्वारा उपलब्ध कराई गयी जानकारी का सही देखभाल के लिए विश्वसनीय हैं| हमे उम्मीद हैं कि यह  बयान आपको समझने में सहायक होगी आपकी जानकारी सुरक्षित हैं| आपके द्वारा उपलब्ध  कराई गयी जानकारी कोई भी त्रितय पक्षीय गोपनीयता रिती के विरुद्ध उपलब्ध नहीं कराई जाएगी|"
       translation disclaimer: "आपकी सुविधा के लिए गोपनीयता नीति का अनुवाद किया गया हैं | LifeChurch.tv अनुवाद की सटीकता का वारंटी या अभ्यावेदन नहीं करता हैं| यदि कोई फर्क अंग्रेजी अनुवाद और दूसरे संस्करण के बीच पाया जाता हैं तो अंग्रेजी संस्करण ही आधार\nसंस्करण के रूप में मान्य हैं |"
       what we collect: "हम क्या जमा करते हैं और उसकी उपयोग की नीति  "
       your information title: "आपके द्वारा दी गयी जानकारियाँ"
@@ -302,7 +303,7 @@ hi:
       international text: "do not translate"
       content title: "सेवा में शामिल के लिए सामग्री प्रस्तुत या उपलब्ध कराया गया हैं"
       content text: "do not translate"
-      contributions title: "Lifechurch.tv के लिए योगदान"
+      contributions title: "YouVersion के लिए योगदान"
       contributions text: "do not translate"
       indemnity title: "शातिपूर्ति और दायित्व का जारी"
       indemnity text: "do not translate"
@@ -400,20 +401,20 @@ hi:
     earned a badge: "आपने एक badge अर्जित किया "
     user badges: "%{user}s के Badges"
   plans:
-    title: "पाठक योजनाएं  "
+    title: "पाठक योजनाएँ  "
     browse by category: "श्रेणी के अनुसार ब्राउस कीजिए"
-    browse plans: "ब्राउस %{category} योजनाएँ"
+    browse plans: "योजनाएँ ब्राउस %{category} कीजिए"
     swap list localization: "(<a href='%{swap_link}'>में देखे%{swap_locale}</a>)"
     showing language filtered: "%{lang_name}भाषा में केवल उपलब्ध पाठक योजना "
-    all: "पूरा"
-    all plans: "पूरी योजनाएँ "
-    all category plans: "सम्पूर्ण%{category} योजनाएँ "
+    all: "समस्त"
+    all plans: "समस्त योजनाएँ "
+    all category plans: "समस्त%{category} योजनाएँ "
     my plans: "मेरी योजनाएँ"
-    none found: "आपके द्वारा अनुरोदित योजना उपलब्ध नहीं हैं| कृपया आपकी खोज के दायरे को सीमित न करें|"
+    none found: "आपके द्वारा अनुरोध किया गया योजना उपलब्ध नहीं हैं| कृपया आपकी खोज के दायरे को सीमित न करें|"
     about publisher: "प्रकाशक के बारे में विवरण"
     overview: "योजना का अवलोकन"
     start: "यह योजना प्रारंभ कीजिए"
-    length field: "योजना का समय:"
+    length field: "योजना की अवधि:"
     view sample: "पाठक योजना का एक नमूना"
     users subscribed: "%{user_count} users इस योजना के पाठक"
     more info: "अधिक जानकारी"
@@ -430,8 +431,8 @@ hi:
     no public plans: "कोई भी YouVersion पाठक योजना %{username}उपलब्ध नहीं हैं|"
     filter by lang: "YouVersion पाठक योजना अपनी पसंदित भाषा में चुनिए|"
     settings: "सेटिंग्स"
-    search: "search"
-    search placeholder: "search%{category} योजना योजनाऍ "
+    search: "अन्वेषण"
+    search placeholder: "सर्च%{category}योजनाऍ "
     subscribe to plan: "इस पाठक योजना को शुरू करें"
     previous day: "पिछला दिन"
     next day: "अगला दिन"
@@ -449,7 +450,7 @@ hi:
     catch up text: "योजना के अनुसार आज के पाठ को  पिछले पढ़े हुए पाठ पर शिफ्ट करें  (योजना   %{last_completed_day} दिवस )."
     catch up description only: "क्या आप अपनी  पाठक योजना से  पिछड़े हैं? फ़िक्र न करें | अपने वर्तमान पाठ को आखरी पढ़े हुए अध्याय या पाठ पर शिफ्ट कर सकते हैं|"
     catch me up: "मेरे लिए यह योजना फिर से प्रारंभ करे"
-    restart description: "YouVersion पाठक योजना आप पुनः आरंभ कर सकते हैं| आपके योजना की  प्रगतिशीलता reset हो गयी हैं |"
+    restart description: "YouVersion पाठक योजना आप पुनः आरंभ कर सकते हैं| योजना के प्रारंभ से शुरुआत कीजिए,आपका अध्ययन इतिहास और योजना में प्रगति भी रीसेट की जाएगी |"
     restart: "YouVersion पाठक योजना पुनः आरंभ करे |"
     privacy description: "क्या आप चाहते की दूसरे पाठक आपके द्वारा उपयोगित योजना को देखे?"
     make private: "नीजी कीजिए "
@@ -457,11 +458,11 @@ hi:
     privacy title: "गोपनीयता"
     stop reading: "इस पाठक योजना को निरस्त करें"
     accountability: "जवाबदार "
-    email reminder to me: "कृपया मुझे हर रोज़ एक इमेल द्वारा reminder भेजे(%{email_address})"
+    email reminder to me: "कृपया मुझे हर रोज़ एक इमेल द्वारा रीमाइन्डर भेजे(%{email_address})"
     email weekly report to a friend: "साप्ताहिक रिपोर्ट एक या एक से अधिक सदस्यों को इमेल करें"
     calendar: "कैलेंडर "
     search members placeholder: "YouVersion सदस्यों को खोजे"
-    search members: "search"
+    search members: "अन्वेषण"
     email_on: "Delivery चालू रखे"
     email_off: "Delivery off रखे"
     email delivery text: "YouVersion पाठक योजना के पध अपने inbox में हर रोज़ पाईये कृपया अपना इमेल delivery on रखे और अपना पसंदीदा समय और संस्करण भी चुनिए|"
@@ -553,8 +554,8 @@ hi:
     relevancy copy: "हमारे अतीत की पीढ़ी को बाइबिल का access बहुत सीमित था| आजकल यह मामला नहीं हैं| हालांकि कई लोग जो बाइबिल का उपयोग करते हैं उनका मान्यता यह हैं की यह सन्देश हमारे जीवन पर लागु नहीं होता वही दुसरे लोग हैं जिनकी मान्यता हैं की बाइबिल और उनके नित्य जीवन के अनुभव के बीच कनेक्शन हैं|"
     information revolution: "जानकारी की क्रांति "
     information revolution copy: "पिछले दशक के दौरान इंटेरनेट क्रांति से लोगो को अपने अधिकारों का एहसास हुआ जो पहले कभी नहीं था |इस क्रांति से हम कौन हैं और बाकी दुनिया के लिए हमारी सोच को आसानी से व्यक्त करने का अवसर मिला तथा हमारी प्रसारण और संवाद, हमारा योगदान और हमारे साझा कार्यक्रम की क्षमता को दर्शाने का मौका भी प्राप्त हुआ| "
-    youversion copy: "1996 में अपनी शुरुआत के बाद से, LifeChurch.tv का उदेश्य लोगो को नेतृत्व कर पूरी तरह से मसीह के समर्पित अनुयायी बनाने में किया गया हैं| ऐसा करने के लिए हमने हमेशा नए तरीके अपना कर लोगो को अपने दैनिक जीवन में बाइबिल से जुड़े रहने के लिए मदद किया हैं |पिछले कुछ वर्षो में आधुनिक तकनीक और नए रणनीति से हमारे तरीके में बदलाव आया हैं लेकिन हमारा बुनियादी मूल्यों में नहीं हैं| हमारा ध्यान लोगो को प्रभु के वचन हर किसी से संबदित हैं बताने में हैं चाहे जीवन में वह किसी भी दशा में हो| "
-    youversion copy 2: "YouVersion LifeChurch.tv के प्रयासों के एक नई सीमा का प्रतिनिधित्व करता हैं, और यह हमें एक नए औज़ार का निर्माण, एक नई सांकेतिक तकनीक से न केवल इसका निर्माण करते हैं, इसके साथ लोगों को प्रभु से समबन्ध बनाने में उनकी महत्वपूर्ण योगदान करता हैं|बाइबिल को उनकी ज़िन्दगी का हिस्सा बनाने में मदद भी करता हैं| "
+    youversion copy: "1996 में अपनी शुरुआत के बाद से, LifeChurch.tv का उदेश्य लोगो को नेतृत्व कर पूरी तरह से मसीह के समर्पित अनुयायी बनाने में किया गया हैं| ऐसा करने के लिए हमने हमेशा नए तरीके अपना कर लोगो को अपने दैनिक जीवन में बाइबिल से जुड़े रहने के लिए मदद किया हैं |पिछले कुछ वर्षो में आधुनिक तकनीक और नए रणनीति से हमारे तरीके में बदलाव आया हैं लेकिन हमारा बुनियादी मूल्यों में नहीं हैं| हमारा ध्यान लोगो को प्रभु के वचन हर किसी से संबंधित बताने में हैं चाहे जीवन में वह किसी भी दशा में हो| "
+    youversion copy 2: "YouVersion, LifeChurch.tv के प्रयासों के एक नई सीमा का प्रतिनिधित्व करता हैं|  हमारे द्वारा नई सांकेतिक तकनीक से औजार का निर्माण दुनिया में प्रभाव डालने के लिए मात्र नहीं हैं| उसका इस्तेमाल लोगों को प्रभु से संबंध बनाने में हैं,तथा बाइबिल को उनकी ज़िन्दगी का महत्त्वपूर्ण हिस्सा बनाने में भी हैं|"
     partners title: "बाइबिल प्रकाशन में साझेधार"
     partners text: "बिना दानी प्रकाशन साझेदारों के YouVersion दुनियाभर में उपलब्धित कराना मुश्किल हैं|कई लोग इनको आभार प्रकट करने के लिए इचुक हैं| प्रकाशन साझेदारों के अधिक जानकारी और इनके योगदान के लिए समस्त विवरण नीछे दिए गए लिंक में उपलब्ध हैं|"
     translation title: "हमारी अनुवाधन टीम "
@@ -571,7 +572,7 @@ hi:
     facebook: "YouVersion फेसबुक पर "
     twitter: "YouVersion ट्विट्टर पर "
     support: "क्या आप YouVersion उपयोग के लिए मदद चाहते हैं? "
-    lead copy: "बाइबिल App ऑनलाइन बाइबिल YouVersion पर आधारित एक मुफ्त मोबाइल बाइबिल हैं जो लगभग किसी भी फोन पर install किया जा सकता हैं| बाइबिल App उपयोगकर्ता को बाइबिल पढने में तथा पद्य को अपने सामाजिक नेटवर्क पर शेयर करने, बुकमार्क और कई ज्यादा सुविधा एक ही स्वरुप में तेजी से वर्दित मोबाइल जीवन शैली के लिए उपलब्ध कराता हैं|"
+    lead copy: "बाइबिल App ऑनलाइन बाइबिल YouVersion पर आधारित एक मुफ्त मोबाइल बाइबिल हैं जो लगभग किसी भी फोन पर इन्स्टॉल किया जा सकता हैं| बाइबिल App उपयोगकर्ता को बाइबिल पढने में तथा पद्य को अपने सामाजिक नेटवर्क पर शेयर करने, बुकमार्क और कई ज्यादा सुविधा एक ही स्वरुप में तेजी से वर्दित मोबाइल जीवन शैली के लिए उपलब्ध कराता हैं|"
     resources title: "प्रेस के द्वारा उपलब्ध संसाधने "
     now title: "YouVersion समुदाय में आज की ताज़ी जानकारी "
     resources:
