--- a/config/locales/km.yml
+++ b/config/locales/km.yml
@@ -126,6 +126,7 @@ km:
     like button text: "ចូល​ចិត្ត"
     unlike button text: "លែង​ចូល​ចិត្ត"
   notes:
+    list title: "កំណត់​ត្រា"
     loading community: "កំពុង​ទាញ​យក​កំណត់​ត្រា​សហគមន៍"
     no community notes: "រកឃើញមិន​មាន​កំណត់​ត្រា​សហគមន៍​យោង​ទៅ​លើ​ខគម្ពីរ​ដែល​បាន​ជ្រើស​រើសទេ។ ដើម្បី​បង្កើត​កំណត់​ត្រា, ជ្រើស​រើស​ខ​គម្ពីរ​ ហើយ​ចុច​លើប៊ូតុង​ជ្រើស​រើស​នៅ​ខាង​ផ្នែក​កម្ម​វិធីអាន​គម្ពីរ។"
     public: "សាធារណៈ"
