--- a/config/locales/mn.yml
+++ b/config/locales/mn.yml
@@ -126,6 +126,7 @@ mn:
     like button text: "Дуртай"
     unlike button text: "Unlike"
   notes:
+    list title: "Тэмдэглэлүүд"
     loading community: "Гишүүдийн тэмдэглэл ачааллаж байна..."
     no community notes: "Сонгосон ишлэлүүдэд гишүүдийн тэмдэглэл олдсонгүй. Тэмдэглэл үүсгэхийн тулд Библи уншигч дотроос ишлэл сонгоод дараа Библи уншигч дээр байрлах Сонгогдсон товчлуур дээр дарна."
     public: "Нийтийн "
