--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -9,8 +9,8 @@ nl:
   about title: "Over YouVersion"
   make a donation: "Geef een Bijdrage"
   thanks for your donation: "Bedankt voor je bijdrage!"
-  thanks authorization: "Bedankt voor je gift! Je machtigingscode is %{code}."
-  donation error: "Het spijt ons, maar er is iets fout gegaan met je bijdrage. Probeer het alsjeblieft nog eens."
+  thanks authorization: "Als je een bon hebt gevraagd, zal het binnenkort in je inbox verschijnen."
+  donation error: "Het spijt ons, maar er is iets fout gegaan met je bijdrage. De fout was: %{error_text}"
   created ago: "%{time_ago} geleden aangemaakt"
   copy: "Kopiëren"
   copy confirmed: "Gekopieerd!"
@@ -126,6 +126,7 @@ nl:
     like button text: "Vind ik leuk"
     unlike button text: "Niet leuk meer"
   notes:
+    list title: "Notities"
     loading community: "Gemeenschappelijke Notities worden geladen..."
     no community notes: "Er zijn geen gemeenschappelijke notities gevonden die gekoppelt zijn aan deze verzen. om een notitie aan te maken, selecteer een vers in de Bijbel lezer en klik de geselecteerd knop van boven in de lezer."
     public: "Openbaar"
@@ -165,7 +166,7 @@ nl:
     preferences: "Voorkeuren"
     listen: "Luister"
     parallel: "Parallel"
-    full screen: "Voledig Scherm"
+    full screen: "Volledig Scherm"
     about the version: "Over de %{version}"
     settings: "Lezer Instellingen"
     invalid chapter title: "Over Deze Versie"
@@ -287,13 +288,13 @@ nl:
       title: "Gebruiksvoorwaarden"
       translation disclaimer: "De voorwaarden voor gebruik zijn voor jou gemak vertaald; maar, LifeChurch.tv geeft geen garanties of verklaringen met betrekking tot de juistheid van de vertaling.  Als er eventuele verschillen worden gevonden tussen de Engels en de vertaalde versie, zal de Engels versie gelden."
       acceptance title: "Aanvaarding van de Voorwaarden"
-      acceptance text: "Door te klikken op 'Ik ga akkoord', erkent u dat u hebt gelezen en akkoord te gaan met de YouVersion GEBRUIKSVOORWAARDEN. LifeChurch.tv levert diensten op het internet en het World Wide Web (de 'Web') door middel van haar YouVersion toepassing en diverse websites waaronder <a href-'http://youversion.com'> http://youversion.com </ a> (collectief, \"YouVersion\"), onder voorbehoud van de volgende gebruiksvoorwaarden. LifeChurch.tv kan deALGEMENE VOORWAARDEN van tijd tot tijd actualiseren, zonder voorafgaande kennisgeving, en onderhoudt de meest recente versie van deze gebruiksvoorwaarden op: <a href='http://youversion.com/terms'> http:// youversion.com / terms </ a>. Bij het gebruik van YouVersion, zult gij ook worden onderworpen aan een aanvullende richtlijnen of regels die van tijd tot tijd worden geplaatst op de YouVersion site. Alle dergelijke richtlijnen of regels zijn hierbij opgenomen door verwijzing in deze Gebruiksvoorwaarden. Overtredingen van deze gebruiksvoorwaarden moet worden gemeld via e-mail naar <a href='mailto:legal@youversion.com'> legal@youversion.com </ a>."
+      acceptance text: "Door te klikken op 'Ik ga akkoord', erkent u dat u hebt gelezen en akkoord te gaan met de YouVersion GEBRUIKSVOORWAARDEN. LifeChurch.tv levert diensten op het internet en het World Wide Web (de 'Web') door middel van haar YouVersion toepassing en diverse websites waaronder <a href-'http://youversion.com'> http://youversion.com</a> (collectief, \"YouVersion\"), onder voorbehoud van de volgende gebruiksvoorwaarden. LifeChurch.tv kan deALGEMENE VOORWAARDEN van tijd tot tijd actualiseren, zonder voorafgaande kennisgeving, en onderhoudt de meest recente versie van deze gebruiksvoorwaarden op: <a href='http://youversion.com/terms'> http://youversion.com/terms</a>. Bij het gebruik van YouVersion, zult gij ook worden onderworpen aan een aanvullende richtlijnen of regels die van tijd tot tijd worden geplaatst op de YouVersion site. Alle dergelijke richtlijnen of regels zijn hierbij opgenomen door verwijzing in deze Gebruiksvoorwaarden. Overtredingen van deze gebruiksvoorwaarden moet worden gemeld via e-mail naar <a href='mailto:legal@youversion.com'> legal@youversion.com</a>."
       description title: "Beschrijving van de Dienst"
       description text: "LifeChurch.tv voorziet Gebruikers van toegang tot een verzameling van diensten door middel van YouVersion, die omvatten, maar zijn niet beperkt tot: online video bekijken, blog posten en opmerkingen, commentaar, andere soorten communicatiemiddelen, forums, en persoonlijke inhoud, zonder kosten voor de gebruiker. Door YouVersion te gebruiken, begrijp je dat zulk gebruik ook omvat de communicaties van LifeChurch.tv, zoals, maar niet beperkt tot, aankondiging van diensten, administratieve berichten, en andere berichten waar je persoonlijk voor bent ingeschreven. Je begrijpt en bent ermee eens dat je zelf verantwoordelijk bent voor het verkrijgen van toegang tot YouVersion, dus voor de kosten van je apparaten en vergoedingen aan derden (zoals voor je internet provider, kosten voor beltegoed, of andere kosten die te maken hebben met het tonen en afleveren van berichten)."
       registration title: "Je Registratie Verplichtingen"
-      registration text: "U erkent en stemt ermee in om: <ul> <li> correcte, accurate, actuele en volledige informatie over uzelf, zoals gevraagd in de registratie YouVersion's vorm (en) (de \"Registratiegegevens\") en </ li> »<li> te behouden en tijdig te actualiseren van de registratiegegevens te houden waarheidsgetrouw, nauwkeurig, actueel en volledig zijn. Als LifeChurch.tv vermoedt dat dergelijke informatie onwaar, onnauwkeurig, niet actueel of onvolledig is, heeft LifeChurch.tv het recht op het op te schorten of beëindigen van uw account en op het weigeren van  alle huidige of toekomstige gebruik van YouVersion (of een deel daarvan). LifeChurch.tv is bezorgd over de veiligheid en privacy van al haar gebruikers, met name kinderen. Om deze reden, moeten de ouders van kinderen onder de 13 jaar die hun kinderen toestaan om YouVersion toegang erkennen dat YouVersion is ontworpen om een beroep op een breed publiek. Daarom is de verantwoordelijkheid om als juridische voogd van u kind, de verantwoordelijkheid om te bepalen of YouVersion geschikt is voor uw kind bij u. </ Li> </ ul>"
+      registration text: "U erkent en stemt ermee in om: <ul> <li> correcte, accurate, actuele en volledige informatie over uzelf, zoals gevraagd in de registratie YouVersion's vorm (en) (de \"Registratiegegevens\") en </li> »<li> te behouden en tijdig te actualiseren van de registratiegegevens te houden waarheidsgetrouw, nauwkeurig, actueel en volledig zijn. Als LifeChurch.tv vermoedt dat dergelijke informatie onwaar, onnauwkeurig, niet actueel of onvolledig is, heeft LifeChurch.tv het recht op het op te schorten of beëindigen van uw account en op het weigeren van  alle huidige of toekomstige gebruik van YouVersion (of een deel daarvan). LifeChurch.tv is bezorgd over de veiligheid en privacy van al haar gebruikers, met name kinderen. Om deze reden, moeten de ouders van kinderen onder de 13 jaar die hun kinderen toestaan om YouVersion toegang erkennen dat YouVersion is ontworpen om een beroep op een breed publiek. Daarom is de verantwoordelijkheid om als juridische voogd van u kind, de verantwoordelijkheid om te bepalen of YouVersion geschikt is voor uw kind bij u.</li></ul>"
       privacy title: "YouVersion Privacy Beleid"
-      privacy text: "Registratie Gegevens en andere informatie over jou is onderhavig aan ons Privacy Beleid, te vinden in <a href='http://youversion.com/privacy'>http://youversion.com/privacy</a>. . Je begrijpt dat door je gebruik van YouVersion je toestemming geeft voor het verzamelen en gebruik (zoals beschreven in het Privacy Beleid) van deze informatie, inclusief het overbrengen van deze informatie naar de Verenigde Staten en/of andere landen voor opslag, verwerking en gebruik door <a href='http://LifeChurch.tv'>Lifechurch.tv</a>."
+      privacy text: "Registratie Gegevens en andere informatie over jou is onderhavig aan ons Privacy Beleid, te vinden in <a href='http://youversion.com/privacy'>http://youversion.com/privacy</a>. Je begrijpt dat door je gebruik van YouVersion je toestemming geeft voor het verzamelen en gebruik (zoals beschreven in het Privacy Beleid) van deze informatie, inclusief het overbrengen van deze informatie naar de Verenigde Staten en/of andere landen voor opslag, verwerking en gebruik door <a href='http://LifeChurch.tv'>Lifechurch.tv</a>."
       account title: "Gebruikers-Account, Wachtwoord en Beveiliging"
       account text: "Bij het afronden van YouVersions registratieprocedure, zal je een wachtwoord ontvangen en een account toewijzing. Je bent verantwoordelijk voor de geheimhouding van het wachtwoord en account, en je bent volledig verantwoordelijk voor alle activiteiten die plaatsvinden met je wachtwoord of account. Je gaat akkoord met: %{item}(a) LifeChurch meteen op de hoogte te stellen van elk ongewenst gebruik van je wachtwoord of account, of elke andere beveiligingsbreuk, en %{item}(b) zorgt ervoor dat je uit je account logt aan het einde van elke sessie."
       conduct title: "Lid Gedrag"
@@ -420,7 +421,7 @@ nl:
     about this plan: "Over dit Leesplan"
     about the publisher: "Over deze Uitgever"
     day: "Dag"
-    month: "Maand"
+    month: "Kalender"
     publisher: "Uitgever"
     success widget title: "Haal het meeste uit je Leesplan"
     success blurb: "Leesplannen zijn de beste manier om Gods Woord een deel van je dagelijks leven te maken. Maar bijna iedereen raakt achter zo nu en dan. Het is belangrijk om elke dag te horen wat God aan ons heeft te zeggen, dus we hebben een paar tips samengesteld om je te helpen op koers te blijven."
@@ -518,7 +519,7 @@ nl:
     suggestion html: "Bedoelde je %{suggestion_link}?"
     all versions: "Alle Versies in het %{language_name}"
   donate:
-    donate now: "Doneer Nu"
+    donate now: "Doneer Nu (US)"
     donate now intl: "of geeft een internationale gift"
     promo 1: "Voor elke $ 1 die je geeft, krijgen 10 meer mensen toegang tot de bijbel op hun mobiele telefoon."
     promo 2: "Met YouVersion is de Bijbel altijd in de buurt. Bekijk onze video."
@@ -544,9 +545,9 @@ nl:
     creation form errors: "De volgende fout(en) voorkwam (voorkwamen) het maken van een donatie:"
   download ad:
     title: "Download de Gratis Bijbel App"
-    line 1: "Honderden versies in vele"
-    line 2: "verschillende talen - de Bijbel die"
-    line 3: "met je meegaat, overal heen."
+    line 1: "Honderden versies in 100+"
+    line 2: "verschillende talen - de Bijbel "
+    line 3: "die overal met je meegaat. "
     download: "Nu Downloaden"
   about page:
     relevancy: "Relevantie"
@@ -555,7 +556,7 @@ nl:
     information revolution copy: "In het afgelopen decennium heeft het Internet een revolutie tot stand gebracht die mensen toegang geeft tot informatie als nooit tevoren. Dankzij de mogelijkheid om te delen, bij te dragen, te creëren, uit te zenden, en te communiceren, is het makkelijk om uit te dragen aan de wereld wie we zijn en wat we geloven."
     youversion copy: "Sinds het begin in 1996, is het doel van LifeChurch.tv om mensen te leiden om volledig toegewijde navolgers van Christus te worden. Daarbij hebben wij naar nieuwe middelen gezocht om mensen te helpen een verbanden te leggen tussen de Bijbel en hun dagelijks leven. Onze methodes zijn veranderd in de loop der jaren, omdat wij verschillende technologieën en strategieën hebben ontwikkeld. Maar aan de basis blijft onze focus gericht op relevantie, terwijl we er voortdurend naar streven om mensen te tonen en te leren hoe Gods Woord betrekking heeft op iedereen, ongeacht waar ze staan in het leven."
     youversion copy 2: "YouVersion vormt een nieuwe grens in the streven van LifeChurch.tv. Wij zijn niet alleen maar een stuk gereedschap aan het bouwen om de wereld te beinvloeden met behulp van innovatieve technologie; maar nog belangrijker is het dat wij mensen met God verbinden, opdat zij de relevantie ontdekken die de Bijbel heeft voor hun leven."
-    partners title: "Een speciale dank aan onze Partners"
+    partners title: "Bijbel Uitgevers Partners"
     partners text: "Zonder de bijdrage van vrijgevige Bijbel uitgevers, zou YouVersion niet in staat zijn om onze wereld weide gemeenschap zo veel Bijbels aan te bieden. Velen onder jullie hebben ons gevraagd hoe jullie die partners in YouVersion's missie konden bedanken Je kan meer te weten komen over hen, hun roeping, en hoe je ze het best kan ondersteunen door deze link te  volgen."
     translation title: "Onze Vertaalteams"
     learn more: "Leer Meer"
@@ -596,7 +597,7 @@ nl:
   mobile page:
     h2: "Gods Woord is met jou."
     h3: "YouVersion is Wereldwijd"
-    h3 sub: "Beschikbaar in honderden talen wereldwijd."
+    h3 sub: "Beschikbaar in meer dan 100 talen wereldwijd."
     main: "Tientallen millioenen mensen gebruiken de Bible App (tm) om Gods Woord een deel van hun leven te maken. Download de gratis app en krijg toegang op je bladwijzers, notitities, en leesplannen vanuit elke plek. Geniet van honderden versies, inclusief audio, alles op je mobiele apparaat."
     button h4: "Ga naar youversion.com/download"
     button h4 sub: "Op je Mobiele Apparaat"
@@ -639,5 +640,5 @@ nl:
       'on': "Aan"
       'off': "Af"
   app errors:
-    404 explanation: "Helaas, we hebben geen pagina gevonden voor <em>%{requested_path}</em>. Als je denkt dat deze pagina zou meten bestaan, laat het dan weten aan ons <a href='%{support_url}'>support team</a> , of ga terug naar de <a href='%{reader_path}'>reader</a>."
+    404 explanation: "Je kan opnieuw starten vanaf de <a href='%{reader_path}'>beginpagina</a>. Ervaar je nog steeds problemen? Neem contact op met onze <a href='%{support_url}'>ondersteuningsteam</a>."
     404 message: "Sorry, de pagina die je zoekt kan niet worden gevonden."
