--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -126,6 +126,7 @@ es:
     like button text: "Me Gusta"
     unlike button text: "No Me Gusta"
   notes:
+    list title: "Comentarios"
     loading community: "Cargando las notas de la comunidad..."
     no community notes: "No hay notas de la comunidad que hagan referencia a los versículos seleccionados.  Para crear una nota, seleccione un versículo en el Lector de la Biblia y luego haga clic en el botón Seleccionado ubicado en la parte superior del lector."
     public: "Público"
