--- a/config/locales/ko.yml
+++ b/config/locales/ko.yml
@@ -126,6 +126,7 @@ ko:
     like button text: "좋아요"
     unlike button text: "좋아요 취소"
   notes:
+    list title: "노트"
     loading community: "공동체 노트 로딩중 ..."
     no community notes: "선택하신 구절에 관한 공동체 노트가 없습니다. 노트 작성을 원하시면 성경 리더에서 원하는 구절을 선택한 후 리더 상단에 있는  '선택' 버튼을 클릭하면 됩니다."
     public: "공개"
@@ -157,8 +158,8 @@ ko:
   ref:
     clear verses: "선택구절 취소"
     choose book and chapter: "성경과 장 선택"
-    choose version: "구절 선택"
-    choose second version: "2차 번역본 선택"
+    choose version: "번역본 선택"
+    choose second version: "다른 번역본 선택"
     share: "공유"
     share now: "지금 공유"
     selected: "선택"
@@ -205,7 +206,7 @@ ko:
     sign in for settings: "프로필을 보려면 로그인 해야 합니다."
     my profile: "내 프로필"
     edit profile: "프로필 수정"
-    update profile: "프로필 갱신"
+    update profile: "프로필 업데이트"
     my password: "비밀번호 변경"
     edit password: "비밀번호 변경"
     picture: "사진"
@@ -371,7 +372,7 @@ ko:
       note_like: "내 노트를 좋아하는 사람이 있을 때 알림"
       reading_plans: "시작한 읽기 계획에 대한 상세정보 알림"
       publishing partners: "YouVersion 콘텐츠 파트너로 부터의 소식을 계속 받고 싶습니다."
-      update: "업데이트 알림"
+      update: "알림기능 설정 업데이트"
   bookmarks:
     edit: "편집"
     delete: "지정한 책갈피 삭제"
@@ -422,7 +423,7 @@ ko:
     day: "일"
     month: "일정표"
     publisher: "출판자"
-    success widget title: "성경읽기계획을 최대로 활용하세요"
+    success widget title: "성경읽기계획을 최대한 활용하세요"
     success blurb: "성경읽기 계획은 하나님의 말씀을 일상 생활의 한 부분으로 만드는 가장 좋은 방법입니다. 그러나 거의 대부분의 사람들이 일정을 놓치기도 합니다. 하나님께서 말씀하시는 것을 매일 듣는다는 것이 정말 중요하기 때문에, 계획을 지속시킬 수 있게 도움을 줄 수 있는 몇 가지 팁을 함께 모았습니다."
     success blog link title: "블로그 읽기"
     a users plans: "%{username}의 계획"
@@ -504,7 +505,7 @@ ko:
     note blurb: "성경 구절에 노트를  하려고 하셨군요.  노트는 하나님의 말씀 안에 있는 진리들을 기억하고 정리하는데 많은 도움이 됩니다.  먼저 계정을 만드신 후 로그인하여야 사용할 수있습니다."
   audio:
     none: "죄송합니다. 이 번역본에 해당하는 오디오가 없습니다."
-    chapter only: "죄송합니다. 해당 구절의 오디오가 없습니다. 리더에서 장별 오디오를 찾으세요."
+    chapter only: "죄송합니다. 오디오는 구절별로 제공되지 않습니다. 리더에서 해당 장으로 가서 오디오를 이용하세요."
     close player menu: "닫기"
   highlights:
     creation error: "죄송합니다.  하이라이트를 할 수 없습니다."
