--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -649,8 +649,11 @@ en:
     404 explanation:                            "You might try starting again from the <a href='%{reader_path}'>home page</a>. Still having trouble? Contact our <a href='%{support_url}'>support team</a>."
     404 message:                                "We're sorry, the page you're looking for can't be found."
   versions:
-    index title:                                "List of Versions"
+    index title:                                "Available Versions"
     publisher widget title:                     "Publisher"
     visit publisher:                            "Visit Publisher's Website"
     read title:                                 "Read This Version"
     other versions:                             "Other Versions from This Publisher"
+    number of versions field:                   "Unique Versions:"
+    number of languages field:                  "Unique Languages:"
+    language and count:                         "%{language_name} (%{language_count})"
